# howlhouse

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.backup.yml  docker-compose.maintenance.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.storage.yml  docker-compose.workers.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
backend/howlhouse/api/: app.py  identity_context.py  main.py
backend/howlhouse/cli/: regenerate_share_cards.py  run_match.py
backend/howlhouse/core/: config.py  logging.py
backend/howlhouse/league/: __init__.py  ratings.py  tournament.py
backend/howlhouse/platform/: access_control.py  agent_ingest.py  blob_store.py  client_ip.py  db.py  distribution.py  event_bus.py  identity.py  job_worker.py  observability.py  outbound_policy.py  runner.py  runtime_policy.py  sandbox.py  sandbox_harness.py  store.py
backend/howlhouse/recap/: __init__.py  clip_finder.py  models.py  share_card.py  town_crier.py
backend/howlhouse/tools/: prune.py
backend/tests/: test_engine_stub.py  test_event_bus.py  test_healthz.py  test_m10_artifacts.py  test_m10_blob_store.py  test_m10_postgres.py  test_m11_postgres_queue.py  test_m11_worker.py  test_m12_access_control.py  test_m13_moderation.py  test_m2_api.py  test_m3_predictions.py  test_m3_visibility.py  test_m4_recap.py  test_m5_agents.py  test_m6_league.py  test_m7_identity.py  test_m8_observability.py  test_m9_proxy_ip.py  test_runtime_policy.py
(+105 files in other folders)
